--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,15 @@
-name: Devel-CallTrace
-version: undef
-author: Robert Spier <rspier@pobox.com> &  Jesse Vincent <jesse@bestpractical.com
-license: Perl
+--- 
+author: 
+  - Jesse Vincent <jesse@bestpractical.com
 distribution_type: module
-no_index:
-  directory:
+generated_by: Module::Install version 0.68
+license: Perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Devel-CallTrace
+no_index: 
+  directory: 
     - inc
-generated_by: Module::Install version 0.36
+    - t
+version: 1.2
